# dyndnsctrl

./: .gitignore  README.md  pyproject.toml
src/dyndnsctrl/: main.py
